--- a/5월 3주차/5월 19일.MD
+++ b/5월 3주차/5월 19일.MD
@@ -37,3 +37,102 @@
 --------------------------------------------------------------
 
 
+### 모델1 구조
+- 모든 처리를 JSP페이지에서 처리한다.
+
+### CommandProcessor2 처리
+```java
+package controller;
+
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.sql.SQLException;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Properties;
+
+import javax.servlet.RequestDispatcher;
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import model.CommandProcessorsor;
+
+@WebServlet("/CommandProcessor2")
+public class CommandProcessor2 extends HttpServlet{
+	
+	private static final long serialVersionUID = 8466717961887434441L;
+	
+	HashMap<String, Object> commandProcessorMap = new HashMap<>();
+	
+	@Override
+	public void init() throws ServletException {
+		
+		FileInputStream fis = null;
+		Properties prop = new Properties();
+		
+		try {
+			fis = new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\Jsp\\Ch12\\WebContent\\WEB-INF\\command.prop");	
+			prop.load(fis);
+			
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}finally {
+			if(fis != null) {
+				try {
+					fis.close();
+					
+				} catch (Exception e2) {
+					e2.printStackTrace();
+				}
+				
+			}
+		}
+		
+		Iterator iter = prop.keySet().iterator();
+		
+		while(iter.hasNext()) {
+			String cmd = (String)iter.next();
+			String processorClassName = prop.getProperty(cmd);
+			
+			try {
+				Class processorClass = Class.forName(processorClassName);
+				Object processorInstance = processorClass.newInstance();
+				commandProcessorMap.put(cmd, processorInstance);
+			} catch (Exception e) {
+				e.printStackTrace();
+			}
+		}
+		
+	}
+
+	@Override
+	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+		req.setCharacterEncoding("utf-8");
+		String cmd = req.getParameter("cmd");
+		
+		CommandProcessorsor processor = (CommandProcessorsor)commandProcessorMap.get(cmd);
+		String view = null;
+		try {
+			view = processor.process(req, resp);
+			
+		} catch (ClassNotFoundException | SQLException e) {
+			e.printStackTrace();
+		}
+		
+		RequestDispatcher rd = req.getRequestDispatcher(view);
+				
+		rd.forward(req, resp);
+	}
+}
+
+```
+
+
+
+
+
+
