--- a/5월 3주차/5월 19일.MD
+++ b/5월 3주차/5월 19일.MD
@@ -131,6 +131,18 @@ public class CommandProcessor2 extends HttpServlet{
 
 ```
 
+### WEB-INF , lib 에 command.prop
+```
+null = model.Member_null
+
+info = model.Member_info
+
+join = model.Member_join
+
+login = model.Member_login
+
+update = model.Member_update
+```
 
 
 
