--- a/5월 4주차/5월 22일.MD
+++ b/5월 4주차/5월 22일.MD
@@ -1,22 +1,8 @@
 # Review
-### MVC란?
-- Model : 비즈니스 로직처리
-- View : 프리젠테이션 로직처리
-- Controller : 사용자와의 인터페이스, 전체 프로그램의 흐름제어 담당
-
-
-분리함으로써 ***유지보수***와  ***코드 재사용*** 을 쉽게 하기 위해 만들어진 디자인 패턴이다.
-
-### 구조
-```
-사용자 -> 컨트롤러 -> 모델  ->
-   |         |            <-    DB
-   ㅡ    프리젠테이션
-
-```
-
-
-
+MVC란?
+- DAO(Data Access Object) : 데이터베이스 접근객체 - CRUD클래스
+- DTO(Data Transfer Object) : Controller와 View사이에서 데이터변환하기 위한 객체
+- 분리함으로써 ***유지보수***와 ***코드 재사용***을 쉽게 하기 위해 만들어진 디자인 패턴이다.
 
 -----------------------------------------------------
 
