--- a/5월 4주차/5월 22일.MD
+++ b/5월 4주차/5월 22일.MD
@@ -7,10 +7,7 @@ MVC란?
 -----------------------------------------------------
 
 ## 학습목표
-- DAO(Data Access Object) : 데이터베이스 접근객체 - CRUD클래스
-- DTO(Data Transfer Object) : 데이터변환하기 위한 객체 - 자바빈
-- VO(Value Object) : 값 자체의미를 갖는 getter~ 만 가지고 있는 고정값의 객체
-- ***프로젝트 실습을 통한 완벽한 CRUD를 구현할 수 있다.***  ( DTO/DAO 구현 및 활용을 할 수 있다.)
+- jsp mysql 연동
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
@@ -19,3 +16,6 @@ MVC란?
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+### 실습 실습 실습
