--- a/5월 4주차/5월 23일.MD
+++ b/5월 4주차/5월 23일.MD
@@ -18,3 +18,6 @@ MVC란?
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+### Model2 로그인 구현 usb저장
