--- a/5월 4주차/5월 24일.MD
+++ b/5월 4주차/5월 24일.MD
@@ -1,13 +1,10 @@
 # Review
-MVC란?
-- DAO(Data Access Object) : 데이터베이스 접근객체 - CRUD클래스
-- DTO(Data Transfer Object) : Controller와 View사이에서 데이터변환하기 위한 객체
-- 분리함으로써 ***유지보수***와 ***코드 재사용***을 쉽게 하기 위해 만들어진 디자인 패턴이다.
+JSP에서 MVC패턴
+- view, controller, model
 
 -----------------------------------------------------
 
 ## 학습목표
-- 학습 및 실습1 : 서블릿을 활용한 MVC2 모델 패턴 구현
 - 실습2 : AddressBook 프로젝트를 MVC로 구현한다.
 - 개별 포트폴리오를 MVC2로 구현한다. - ~수요일
 
