--- a/5월 4주차/5월 24일.MD
+++ b/5월 4주차/5월 24일.MD
@@ -18,3 +18,14 @@ JSP에서 MVC패턴
 
 
 ### Model2 로그인 구현 usb저장
+
+### auto_increment 값 초기화
+```
+ALTER TABLE [테이블명] AUTO_INCREMENT=1;
+SET @COUNT = 0;
+UPDATE [테이블명] SET [AUTO_INCREMENT 열 이름] = @COUNT:=@COUNT+1;
+
+ALTER TABLE `tb_board_item` AUTO_INCREMENT=1;
+SET @COUNT = 0;
+UPDATE `tb_board_item` SET board_item_key = @COUNT:=@COUNT+1;
+```
