--- a/5월 4주차/5월 24일.MD
+++ b/5월 4주차/5월 24일.MD
@@ -29,3 +29,57 @@ ALTER TABLE `tb_board_item` AUTO_INCREMENT=1;
 SET @COUNT = 0;
 UPDATE `tb_board_item` SET board_item_key = @COUNT:=@COUNT+1;
 ```
+
+### jsp화면 안만들고 Alert창 이용
+- httpBuilder
+```java
+package model;
+
+import java.io.IOException;
+import java.io.PrintWriter;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import dao.DAO;
+
+public class Address_delete implements CommandProcessor {
+
+	DAO dao = new DAO();
+	
+	@Override
+	public String process(HttpServletRequest request, HttpServletResponse response) {
+
+		String target_id = request.getParameter("id");
+		
+		int id = Integer.parseInt(target_id);
+		
+		request.setAttribute("address", dao.getAddress(id));
+		
+		dao.removeAddress(id);
+		
+		String message = "회원삭제가 완료되었습니다.";
+		String redirectUrl = "AddressController?cmd=address_list";
+		
+		// HTML
+		StringBuilder htmlBuilder = new StringBuilder();
+		htmlBuilder.append("<script type=\"text/javascript\">");
+		htmlBuilder.append("alert('"+message+"');");
+		htmlBuilder.append("window.location.href = '" + redirectUrl + "';");
+		htmlBuilder.append("</script>");
+		
+		response.setContentType("text/html;charset=UTF-8");
+	    try (PrintWriter out = response.getWriter()) {
+	        out.print(htmlBuilder.toString());
+	    } catch (IOException e) {
+	        e.printStackTrace();
+	    }
+	    
+	    return null;
+		
+//		return "AddressController?cmd=address_list";
+	}
+
+}
+
+```
