--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -5,8 +5,9 @@ JSP에서 MVC패턴
 -----------------------------------------------------
 
 ## 학습목표
-- 실습2 : AddressBook 프로젝트를 MVC로 구현한다.
-- 개별 포트폴리오를 MVC2로 구현한다. - ~수요일
+- JSTL 학습
+- 실습3 : 성적관리 프로젝트 구현
+- 개별 포트폴리오를 MVC2로 구현한다.
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
