--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -16,3 +16,46 @@ JSP에서 MVC패턴
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+### jstl 이론
+```jsp
+<!-- 
+	- JSTL(표준태그 라이브러리)
+		. 사용자 정의 태그중에서 자주사용하는 것을 모아서 표쥰화 시킨것
+		
+	- 종류
+		. 코어 : 변수, 제어흐름, URL처리
+		< %@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" % >
+		
+		. 데이터베이스 : sql
+		< %@ taglib prefix="sql" uri = "http://java.sun.com/jsp/jstl/sql" % >
+		
+		. 함수 : 컬렉션처리, String처리
+		< %@ taglib prefix="fn" uri = "http://java.sun.com/jsp/jstl/fn" % >
+		
+		. xml : xml 처리
+		< %@ taglib prefix="x" uri = "http://java.sun.com/jsp/jstl/xml % >
+		
+		. 국제화 : 메시지형식, 숫자 및 날짜형식
+		< %@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" % >
+		
+	1. 변수처리
+		. <c:set var="" value=""></c:set>
+		. remove : 
+		
+	2. 흐름제어
+		. if : 조건에 따라 내부코드를 수행
+		. choose : 다중조건을 처리할 때 사용
+		. forEach : for~each 같은 기능
+		. forTokens : 구분자로 분리된 문자열을 처리할 때 사용
+		
+	3. url처리
+		. import
+		. redirect : 지정된 url로 이동
+		. url
+		
+	4. 기타
+		. catch : 예외처리
+		. out : 출력
+ -->
+```
