--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -58,4 +58,12 @@ JSP에서 MVC패턴
 		. catch : 예외처리
 		. out : 출력
  -->
+ 
+<!-- 
+	. set의 기본형식
+		- 변수도 "변수" 와 같이 쌍따옴표 안에 작성한다.
+		- 값도 "값" 와 같이 쌍따옴표 안에 작성한다.
+		- 선택사항으로 scope를 지정해서... page, request, session, application중 지정
+ -->
+ 
 ```
