--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -66,4 +66,15 @@ JSP에서 MVC패턴
 		- 선택사항으로 scope를 지정해서... page, request, session, application중 지정
  -->
  
+ <!-- 
+	c:if태그
+		.	자바의 if문과 같다
+		.	복잡한 else - if문을 표현할수는 없다.
+		.	(c:if test="조건")
+			~~~~~~~~~~~~~
+			~~~~~~~~~~~~~
+			(/c:if)
+			. 조건식에는 표현식, 표현언어를 표현할 수 있다.
+ -->
+ 
 ```
