--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -78,3 +78,36 @@ JSP에서 MVC패턴
  -->
  
 ```
+
+### jsp param이용 표현
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %> 
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form action="">
+		이름 : <input type="text" name="name"><br>
+		나이 : <input type="text" name="age"><br>
+		<input type="submit" value="전송">
+	</form>
+	<hr>
+	<c:if test="true">
+		여기는 무조건 실행됩니다.<br>
+	</c:if>
+	<c:if test="${param.name == '홍길동' }">
+		파라미터 name의 값이 ${param.name }입니다.<br>
+	</c:if>
+	<c:if test="${param.age > 20 }">
+		파라미터 age의 값이 20 이상입니다.
+	</c:if>
+	
+</body>
+</html>
+
+```
