--- a/5월 4주차/5월 25일.MD
+++ b/5월 4주차/5월 25일.MD
@@ -76,6 +76,22 @@ JSP에서 MVC패턴
 			(/c:if)
 			. 조건식에는 표현식, 표현언어를 표현할 수 있다.
  -->
+ <!-- 
+	forEach
+		. var : 반복시킬 변수
+		. begin : 시작값
+		. end : 끝값
+		. index : 현재 실행에서 사용되는 배열인덱스
+		. count : 반복문 실행횟수
+		
+		* item="${배열} 대상으로하는 배열
+		* 배열에 접근하는 방식
+			.varStatus속성 : 배열의 인덱스를 참조
+			. ${status.index}: 배열의 인덱스를 참조
+			. ${status.current}: 현재 참조하고 있는 인덱스에 해당하는 값
+			. ${status.count} : 현재 반복한 횟수
+ 
+ -->
  
 ```
 
@@ -143,6 +159,89 @@ JSP에서 MVC패턴
 	
 	</c:choose>
 
+</body>
+</html>
+```
+
+### forEach문
+```jsp
+
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>    
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		int sum=0;
+		for (int i=1;i<=10;i++){
+			sum += i;
+		}
+	%>
+	
+	<c:forEach var="i" begin="1" end="100" step="1">
+		<c:set var="result" value="${result+i }"></c:set>
+	</c:forEach>
+	
+	1 ~ 100까지의 합은 ${result } 입니다.
+	
+	<hr>
+	<c:set var="arr" value="<%=new int[]{1,2,3,4,5,6,7,8,9,10} %>"></c:set>
+	
+	<table border="1">
+		<tr>
+		    <td>배열원소값</td><td>현재반복횟수</td><td>인덱스</td>
+		</tr>
+		<c:forEach var="i" items="${arr}" begin="2" end="4" varStatus="status">
+		    <tr>
+		        <td>${i}(${status.current })</td>
+		        <td>${status.count}</td>
+		        <td>${status.index}</td>
+		    </tr>
+		</c:forEach>
+	</table>
+	
+</body>
+</html>
+```
+
+### tokenizer 사용, forTokens
+```jsp
+<%@page import="java.util.StringTokenizer"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %> 
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		String str = "korea,japan,china,usa";
+	
+		StringTokenizer st = new StringTokenizer(str,",");
+		while(st.hasMoreElements()){
+			String s = (String)st.nextElement();
+			out.print(s+"<br>");
+		}
+		
+	%>
+	<hr>
+	<c:forTokens var="country" items="korea,japan,china,usa" delims="," begin="0" end="3" step="1" varStatus="status">
+		해당위치의 값 :  ${country }<br>
+		현재 인덱스 해당 값 : ${status.current }<br>
+		현재 반복횟수 : ${status.count }<br>
+		현재 인덱스 : ${status.index }<br>
+		-------------------------------<br>
+	</c:forTokens>
+	
+	
 </body>
 </html>
 ```
