--- a/5월 4주차/5월 26일.MD
+++ b/5월 4주차/5월 26일.MD
@@ -16,3 +16,22 @@ JSP에서 MVC패턴
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+### xml servlet
+```xml
+  <!-- 
+  	load-on-startup 태그
+  		. 서블릿을 배치할때 사용한다.
+  		. 웹 어플리케이션이 시작될때 자동으로 생성된다.
+  		. 이 지정된 객체는 최초요청이 있을때 생성된다.
+  		. 생성순서는 숫자가 작은것이 먼저 생성되고 
+  		. 여러개의 서블릿일 경우 먼저 선언된것이 먼저 생성된다.
+   -->
+  
+  <servlet>
+  	<servlet-name>AppInitServlet</servlet-name>
+  	<servlet-class>study.servlets.AppinitServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>vlet>
+```
