--- a/5월 4주차/5월 26일.MD
+++ b/5월 4주차/5월 26일.MD
@@ -17,6 +17,23 @@ JSP에서 MVC패턴
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 
+### Servlet 데이터보관소
+```java
+/*
+	서블릿의 데이터보관소
+		JSP					Java(서블릿)				scope
+		-------------------------------------------------
+		pageContext			JspContext				페이지
+		request				HttpServletRequest		요청~응답
+		session				HttpSession				로그인~로그아웃
+		application			ServletContext			서블릿 최초생성시 ~ 언로드(톰캣,웹)종료
+		
+	ServletConfig
+		- 서블릿 설정정보 객체
+		- ServletContext객체를 얻을 수 있다.
+		- 서블릿에 대한 초기화 작업기능
+*/
+```
 
 ### xml servlet
 ```xml
