--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -1,6 +1,24 @@
 # Review
-JSP에서 MVC패턴
-- view, controller, model
+데이터저장소
+- ServletContext : 애플리케이션 시작 ~ 종료
+- HttpSession : 로그인 상태
+- ServletRequest : 요청에서 응답
+- JspContext : 페이지를 실행하는 동안 유지
+- ServletConfig : 서블릿 환경설정, 서블릿마다 하나씩 생성
+
+URL 정보추출
+- getRequestURL() : 요청한 URL리턴
+- getRequestURI() : 서버주소를 제외한 URL리턴
+- getContextPath() : 웹 애플리케이션 경로(프로젝트 이하)
+- getServletPAth() : 매핑선언된 서블릿경로
+- getQueryString() : 요청된 질의 문자열
+
+***load-on-servlet***
+- 클라이언트의 요청이 없더라도 준비작업을 해놓기 위해서 구현해 놓은 서블릿을 웹 애플리케이션이 시작될때 자동으로
+- 생성하기 위해 web.xml에 실행순서를 지정하여 설정한다.
+
+- 서블릿에 URL매핑이 없는 서블릿은 클라이언트가 실행을 요청할 수 없기에 URL 매핑이 없는 서블릿의 실행을 위해 지정한다.
+
 
 -----------------------------------------------------
 
