--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -16,8 +16,31 @@ URL 정보추출
 ***load-on-servlet***
 - 클라이언트의 요청이 없더라도 준비작업을 해놓기 위해서 구현해 놓은 서블릿을 웹 애플리케이션이 시작될때 자동으로
 - 생성하기 위해 web.xml에 실행순서를 지정하여 설정한다.
-
 - 서블릿에 URL매핑이 없는 서블릿은 클라이언트가 실행을 요청할 수 없기에 URL 매핑이 없는 서블릿의 실행을 위해 지정한다.
+
+Filter
+- 클라이언트 부터 섭르릿이 요청되어 수행될 때 필터링 기능을 제공하기 위한 기술이다.
+- 수행되는 시점 : 클라이언트 >> filter >> 서블릿
+```
+- 요청된 서블릿이 수행되기 전
+- 요청된 서블릿이 수행된 후
+```
+>> 클라이언트로부터 요청된 페이지가 실행될 때마다 자동으로 함께 실행된다.
+- 효과 : 서블릿의 처리와 유지 보수를 효과적으로 처리할 수 있다.
+
+기능들
+```
+- 서블릿이 호출되기 전에 서블릿 요청을 가로채는 기능
+- 서블릿이 호출되기전에 요청내용을 점검하는 기능
+- 요청헤더의 수정과 조정기능
+- 서블릿이 호출된 후 서블릿 응답을 가로채는 기능
+- 응답헤더의 수정과 조정 기능
+```
+
+- init() : 필터 객체가 생성될 때 호출
+- doFilter() : 필터링 설정한 서블릿을 실행할 때마다 호출되는 메서드(실제 필터링 구현)
+- Destroy() : 필터 객체가 삭제될 때 호출
+- 필터 등록 : 어노테이션 or web.xml 두가지 방식
 
 
 -----------------------------------------------------
