--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -42,6 +42,30 @@ Filter
 - Destroy() : 필터 객체가 삭제될 때 호출
 - 필터 등록 : 어노테이션 or web.xml 두가지 방식
 
+web.xml 등록
+- 웹 애플리케이션 실행에 관한 내용을 태그를 이용해서 설정하는 파일
+- 작성시 순서
+```
+<display-name>
+<description>
+<distributeable>
+<context-param>
+<filter>
+<filter-mapping>
+<listener>
+<servlet>
+<servlet-mapping>
+<welcome-file-list>
+<error-page>
+
+```
+
+DB Connection 구현
+- 서블릿 활용
+- Listenner 활용
+- JNDI활용(Java Naming and Directory Interface)
+- MyBatis 
+
 
 -----------------------------------------------------
 
