--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -70,9 +70,7 @@ DB Connection 구현
 -----------------------------------------------------
 
 ## 학습목표
-- JSTL 학습
-- 실습3 : 성적관리 프로젝트 구현
-- 개별 포트폴리오를 MVC2로 구현한다.
+- Listner 활용
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
