--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -79,3 +79,19 @@ DB Connection 구현
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+### 이론
+```
+/*
+	서블릿 리스너
+		; 서블릿컨테이너는 웹 애플리케이션의 상태를 모니터링 할 수 있도록
+			시작에서 종료까지 주요한 사건(Event)에 대한 알람기능을 제공한다.
+		
+		- 웹 애플리케이션의 시작/종료	:	ServletContextListener
+		- 세션생성/소멸			:	HttpSessionListener
+		- 요청/응답				:	ServletRequestListener
+*/
+```
+
+
