--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -92,6 +92,21 @@ DB Connection 구현
 		- 세션생성/소멸			:	HttpSessionListener
 		- 요청/응답				:	ServletRequestListener
 */
+
+/*
+	- 컨넥션으로 처리하지 않으면,, 예외발생시 롤백을 해야하는데
+		다른 요청작업까지 모두 롤백되버리는 치명적인 오류가 발생된다.
+		
+	- 이러한 문제를 해결하기 위해서 connection으로 처리하는데
+	
+	- SQL작업을 할때마다 DB Connection을 준비하게 된다면 실행속도가 느려진다.
+	
+	- 해결방법으로..
+		>> 각 요청별로 별도의 컨넥션을 사용하게 해서 다른 작업에 영향을 주지 않도록 처리해야 한다. 
+		>> 동시다발적으로 접속하는 문제에 대한 효율적 대응을 구현할 수 있다.
+*/
+
+
 ```
 
 
