--- a/6월 1주차/5월 30일.MD
+++ b/6월 1주차/5월 30일.MD
@@ -19,7 +19,7 @@ URL 정보추출
 - 서블릿에 URL매핑이 없는 서블릿은 클라이언트가 실행을 요청할 수 없기에 URL 매핑이 없는 서블릿의 실행을 위해 지정한다.
 
 Filter
-- 클라이언트 부터 섭르릿이 요청되어 수행될 때 필터링 기능을 제공하기 위한 기술이다.
+- 클라이언트 부터 서블릿이 요청되어 수행될 때 필터링 기능을 제공하기 위한 기술이다.
 - 수행되는 시점 : 클라이언트 >> filter >> 서블릿
 ```
 - 요청된 서블릿이 수행되기 전
