--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -20,3 +20,11 @@
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+### inclue 처리
+- setContentType에서 지정해줘야 한글이 안깨짐
+```
+		resp.setContentType("text/html;charset=utf-8");
+		rd.include(req, resp);
+```
