--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -28,3 +28,55 @@
 		resp.setContentType("text/html;charset=utf-8");
 		rd.include(req, resp);
 ```
+
+### tomcat context.xml
+```xml
+	<Resource
+		name="jdbc/myDB"
+		auth="Container"
+		type="javax.sql.DataSource"
+		maxActive="10" maxIdle="3" maxWait="10000"
+		username="root"
+		password="mysql"
+		driveClassName="com.mysql.jdbc.Driver"
+		url="jdbc:mysql://localhost:3306/studyDB"
+		closeMethod="close">
+	</Resource>
+	<!-- 
+		. name : JDBC이름
+		. auth : 자원관리자 - Container
+		. type : 자원의 리소스이름 - DataSource클래스 (패키지이름까지 포함)
+		. maxActive : 최대 연결가능한 connection수(기본 20개)
+		. maxIdle : 사용가능한 컨넥션이 없을때 회수대기시간
+	 -->
+```
+
+### web.xml
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>Ch23</display-name>
+	
+	<resource-ref>
+		<res-ref-name>jdbc/myDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	
+	<!-- 리스너 배치 -->
+<!-- 	<listener>
+		<listener-class>study.listeners.ContextLoaderListener</listener-class>
+	</listener> -->
+	
+	<servlet>
+		<servlet-name>AppInitServlet</servlet-name>
+		<servlet-class>study.servlets.AppInitServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+  
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+
+  </welcome-file-list>
+</web-app>
+```
