--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -80,3 +80,12 @@
   </welcome-file-list>
 </web-app>
 ```
+
+
+### Datasource
+```java
+DataSource ds = (DataSource)initialContext.lookup("java:comp/env/jdbc/myDB");
+// DataSource(JDBC자원)
+//	- 컨넥션 풀의 connection을 관리하기 위한 객체이다.
+//	- DataSOurce객체를 통해서 Connection을 획득, 반납등의 작업을 한다.
+```
