--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -89,3 +89,20 @@ DataSource ds = (DataSource)initialContext.lookup("java:comp/env/jdbc/myDB");
 //	- 컨넥션 풀의 connection을 관리하기 위한 객체이다.
 //	- DataSOurce객체를 통해서 Connection을 획득, 반납등의 작업을 한다.
 ```
+
+### JNDI
+```java
+/*
+	JNDI ?
+		- Java Naming and Directory Interface	API
+		- 디렉터리 서비스에 접근하는 필요한 API이다.
+		- 애플리케이션은 API를 통해서 자원(서버나 메시징시스템등)을 찾을 수 있다.
+		- JDBC를 특히 데이터소스라 한다.
+		- 자원을 서버에 등록할때 고유한 JNDI이름을 붙인다.
+
+		- 서버에서 자원을 찾을때 기본 JNDI이름
+			java:comp/env		-	응용프로그램 환경항목
+			java:comp/env/jdbc	-	jdbc데이터소스 
+				~~~
+*/
+```
