--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -21,6 +21,21 @@
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 
+## jndi 설치
+```
+https://commons.apache.org/
+
+DBCP
+왼쪽 download
+Binaries 위에꺼 다운 ( 반디집 필요 )
+
+Pool
+이하 동문
+
+lib에 jar 넣기
+
+```
+
 
 ### inclue 처리
 - setContentType에서 지정해줘야 한글이 안깨짐
