--- a/6월 1주차/5월 31일.MD
+++ b/6월 1주차/5월 31일.MD
@@ -21,11 +21,52 @@
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 
+### URL패턴
+```
+. web.xml
+. @Webservlet("/")
+. 목적
+	- 보안적용
+	- java도 실행가능처리
+	- jsp(html) >> java로 요청처리 기능
+
+. Mapping
+	- web.xml
+	- @WebServlet()
+	- @RequestMapping(value = "index", method = "RequestMethod.POST")
+        	
+. 패턴문법
+	- ? : 한글자, * : 여러글자, ** : 하위경로
+	- 예) https:// localhost:8080 / Ch20 / member / login.do
+		
+	
+		. @WebServlet("/member/*")	/시작하고 / * 끝나는것
+		. @WebServlet("*.do")		*.로 시작하고 do 끝나는것(확장자매칭)
+						/login/hello.do, /login/hi.do, /hi.do
+		
+		. @WebServlet("/"           요청받은 모든 URL해당
+		
+	- 예) @WebServlet("/login/hello.do")
+					http://localhost:8080/ch20/hello.do
+		  
+		  @WebServlet("/login/*")
+		  			/login/hello, /login/my.car, /login/hi.do
+					
+		  @WebServlet("/login/**/tmp/*.do")
+		  			/login/tmp/hello.do , /login/abc/tmp/hello.do
+					
+		  @WebServlet("/login/??")
+		  			/login/hi.do , /login/my.car
+		
+		  @WebServlet("/*.???")		/hello.pdf , /hi.txt
+		  			
+		
+```
+
+
 ## jndi 설치
 ```
 https://commons.apache.org/
-
-
 
 DBCP
 왼쪽 download
@@ -35,7 +76,6 @@ Pool
 이하 동문
 
 lib에 jar 넣기
-
 ```
 
 
