--- a/6월 1주차/6월 1일.MD
+++ b/6월 1주차/6월 1일.MD
@@ -5,6 +5,15 @@
 - listener : servletContextListener, HttpSessionListener, ServletRequestListener
 - Connection Pool
 
+#### URL 경로실습
+
+#### DataResource (JNDI)
+- DBMS 자원을 Tomcat에 Resource로 등록하여 활용한다.
+- 코드에서 자유로워질 수 있고, 여러 DBMS를 적용할 수 있다.
+
+#### FrontController + URL 패턴(*.do)
+- URL패턴을 활용하여 서블릿을 컨트롤러와 매핑하여 결합도를 낮추고 응집도를 높인다.
+
 
 -----------------------------------------------------
 
