--- a/6월 1주차/6월 1일.MD
+++ b/6월 1주차/6월 1일.MD
@@ -18,14 +18,22 @@
 -----------------------------------------------------
 
 ## 학습목표
-- 페이지이동에 대한 완전한 이해
-- JNDI를 활용한 DB connection과 connection pool 구현
+```
+                  (호츌규칙)
+                      |
+- FrontController ---------- PageController
+- FrontController ---------- PageController(일반클래스)
+```
+
 - (실습)성적관리 시스템 구현
 
+
 ## 포트폴리오에 반영할 사항
-- 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
-- ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해 놓는다.
-- HTML페이지 -> 동적문서일 경우 JSP페이지로 전환한다.
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
+- DAO/DTO를 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+- 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
+
+
+### 유지보수 중요하다.
