--- a/6월 1주차/6월 1일.MD
+++ b/6월 1주차/6월 1일.MD
@@ -32,6 +32,7 @@
 - Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
 - 로그인을 구현해 놓는다.
 - DAO/DTO를 구현해 놓는다.
+- View페이지를 완료해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 - 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
 
