--- a/6월 1주차/6월 2일.MD
+++ b/6월 1주차/6월 2일.MD
@@ -1,19 +1,17 @@
 # Review
 - load-on-servlet
-- filter
-- url경로실습
-- listener : servletContextListener, HttpSessionListener, ServletRequestListener
+- Filter
+- Listener
 - Connection Pool
+- DataResource(JNDI)
+- FrontController + URL 패턴 (*.do)
+- Servlet > Class
+- DI(의존성주입)처리
+- 특정적인 작업을 수행할때 사용하는 객체
+- 의존객체(예:dao) > 이러한 상호 관계를 의존관계라고 한다.
+- MutiDatabase
 
 #### URL 경로실습
-
-#### DataResource (JNDI)
-- DBMS 자원을 Tomcat에 Resource로 등록하여 활용한다.
-- 코드에서 자유로워질 수 있고, 여러 DBMS를 적용할 수 있다.
-
-#### FrontController + URL 패턴(*.do)
-- URL패턴을 활용하여 서블릿을 컨트롤러와 매핑하여 결합도를 낮추고 응집도를 높인다.
-
 
 -----------------------------------------------------
 
