--- a/6월 1주차/6월 2일.MD
+++ b/6월 1주차/6월 2일.MD
@@ -16,14 +16,10 @@
 -----------------------------------------------------
 
 ## 학습목표
-```
-                  (호츌규칙)
-                      |
-- FrontController ---------- PageController
-- FrontController ---------- PageController(일반클래스)
-```
-
+- AddressBook을 학습한 기준으로 구현한다.
 - (실습)성적관리 시스템 구현
+- 학습계획 ( 다음주 JSP 및 개인프로젝트 완료/평가)
+- Spring을 활용한 팀프로젝트 진행 : 조편성 (5~6명) 6/30 , 자료정리 7/3 ~ 7/4 심사평가원
 
 
 ## 포트폴리오에 반영할 사항
