--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -16,8 +16,6 @@
 -----------------------------------------------------
 
 ## 학습목표
-- AddressBook을 학습한 기준으로 구현한다.
-- (실습)성적관리 시스템 구현
 - 학습계획 ( 다음주 JSP 및 개인프로젝트 완료/평가)
 - Spring을 활용한 팀프로젝트 진행 : 조편성 (5~6명) 6/30 , 자료정리 7/3 ~ 7/4 심사평가원
 
@@ -29,3 +27,131 @@
 - View페이지를 완료해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 - 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
+------------------------------------------------------------------------
+# 용어모음
+
+### Properties
+- Hashtables의 하위클래스이다.
+- Hashtables를 상속 받았기에 Map의 속성 즉 Key와 Value를 갖는다.
+- HashMap과 큰 차이는 없지만 Properties 클래스느 파일 
+- 메서드 종류
+```
+load()
+- 메서드의 이름 그대로 파일의 내용을 읽어서 키 - 값 형태로 분류해서 맵에 보관함
+Properties p = new Properties();
+p.load(new Filereader(filePath));
+
+keySet()
+- HashMap에서 사용되는 keySet()과 동일하게 저장된 모든 키 Set을 반납한다.
+Properties p = new Properties();
+p.load(new Filereader(filePath));
+for ( Object i : p.keySet()) {
+  key = (String)i;
+  value = p.getProperty(key);
+}
+
+```
+
+## 코드해석
+```java
+public class ApplicationContext {
+	
+	//객체를 생성한후 보관할 저장소  [(키,밸류),(키,밸류)..]
+	HashMap<String, Object> objTable = new HashMap<String, Object>();
+	
+	public Object getBean(String key){
+	
+	//객체반환
+	return objTable.get(key);
+	}
+	//생성자
+	public ApplicationContext(String propertiesPath) throws Exception {
+		
+		Properties props = new Properties(); //이름과 값 형태의 파일을 다룰 떄 사용하는 클래스
+		props.load(new FileReader(propertiesPath));
+		
+		prepareObjects(props);
+		injectDependency();
+	}
+	private void prepareObjects(Properties props) throws Exception {
+		String key = null;
+		String value = null;
+		InitialContext ctx = new InitialContext();
+		
+		 for(Object item : props.keySet()) {
+			 
+			 key = (String)item;
+			 value = props.getProperty(key);
+			 
+			 //1)jndi~
+			 if(key.startsWith("jndi.")) {
+				 objTable.put(key, ctx.lookup(value));
+			 }
+			 //2)일반객체
+			 else {
+				objTable.put(key, Class.forName(value).newInstance()); 
+			} 
+		}
+	}
+	private void injectDependency() throws Exception {
+		for(String key: objTable.keySet()) {
+			if(!key.startsWith("jndi")) {
+				
+				callSetter(objTable.get(key));
+			}
+		}
+	}
+	private void callSetter(Object obj) throws Exception {
+		
+		Object dependency = null;
+		Method[] ms = obj.getClass().getMethods();
+		for(Method m :ms) {
+			if(m.getName().startsWith("set")) {
+			 dependency = findObjectByType(m.getParameterTypes()[0]);
+			 
+			 if(dependency != null) {
+				 m.invoke(obj, dependency);
+			 }
+		   }
+		}
+	 }
+	private Object findObjectByType(Class<?> type) {
+		
+		Collection<Object> objs = objTable.values();
+		for(Object obj: objs) {
+			if(type.isInstance(obj)) {
+				return obj;
+			}
+		}
+		return null;
+	}
+}
+```
+
+
+```java
+HashMap<String, Object> objTable = new HashMap<String, Object>();
+```
+- objTable 객체를 생성한 후 보관하는 저장소로 HashMap<String, Object> 
+
+
+```java
+public Object getBean(String key){	
+	//객체반환
+	return objTable.get(key);
+	}
+```
+- 'key'를 입력받아 해당 키에 해당하는 객체를 반환함
+
+
+```java
+public ApplicationContext(String propertiesPath) throws Exception {
+		
+		Properties props = new Properties(); //이름과 값 형태의 파일을 다룰 떄 사용하는 클래스
+		props.load(new FileReader(propertiesPath));
+		
+		prepareObjects(props);
+		injectDependency();
+	}
+```
+- propertiesPath를 입력받아 Properties객체를 생성하고 파일을 로드함
