--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -52,7 +52,7 @@ for ( Object i : p.keySet()) {
 
 ```
 
-## 코드해석
+## 코드전체
 ```java
 public class ApplicationContext {
 	
@@ -128,6 +128,7 @@ public class ApplicationContext {
 }
 ```
 
+## 코드 나눠서 
 
 ```java
 HashMap<String, Object> objTable = new HashMap<String, Object>();
