--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -128,23 +128,23 @@ public class ApplicationContext {
 }
 ```
 
-## 코드 나눠서 
+## 코드 나눠서 해석
 
+- objTable 객체를 생성한 후 보관하는 저장소로 HashMap<String, Object> 
 ```java
 HashMap<String, Object> objTable = new HashMap<String, Object>();
 ```
-- objTable 객체를 생성한 후 보관하는 저장소로 HashMap<String, Object> 
 
-
+- 'key'를 입력받아 해당 키에 해당하는 객체를 반환함
 ```java
 public Object getBean(String key){	
 	//객체반환
 	return objTable.get(key);
 	}
 ```
-- 'key'를 입력받아 해당 키에 해당하는 객체를 반환함
 
 
+- propertiesPath를 입력받아 Properties객체를 생성하고 파일을 로드함
 ```java
 public ApplicationContext(String propertiesPath) throws Exception {
 		
@@ -155,4 +155,64 @@ public ApplicationContext(String propertiesPath) throws Exception {
 		injectDependency();
 	}
 ```
-- propertiesPath를 입력받아 Properties객체를 생성하고 파일을 로드함
+
+
+- Properties 객체를 매개변수로 받음
+- key와 value 변수를 선언
+- InitialContext 객체를 생성
+- key값이 jndi로 시작하는경우 ctx.lookup 호출 JNDI를 통해 객체 찾음
+- InitialContext ctx = new InitialContext()
+- 톰캣 서버가 관리하는 객체를 얻기 위한 준비
+```java
+private void prepareObjects(Properties props) throws Exception {
+		String key = null;
+		String value = null;
+		InitialContext ctx = new InitialContext();
+		
+		 for(Object item : props.keySet()) {
+			 
+			 key = (String)item;
+			 value = props.getProperty(key);
+			 
+			 //1)jndi~
+			 if(key.startsWith("jndi.")) {
+				 objTable.put(key, ctx.lookup(value));
+			 }
+			 //2)일반객체
+			 else {
+				objTable.put(key, Class.forName(value).newInstance()); 
+			} 
+		}
+	}
+```
+
+- objTable
+- callSetter 메서드를 호출하여 해당 객체의 세터 메서드를 호출하여 의존성 주입
+```java
+private void injectDependency() throws Exception {
+		for(String key: objTable.keySet()) {
+			if(!key.startsWith("jndi")) {
+				
+				callSetter(objTable.get(key));
+			}
+		}
+	}
+```
+
+- setter메서드를 찾아서 실행해줌
+```java
+private void callSetter(Object obj) throws Exception {
+		
+		Object dependency = null;
+		Method[] ms = obj.getClass().getMethods();
+		for(Method m :ms) {
+			if(m.getName().startsWith("set")) {
+			 dependency = findObjectByType(m.getParameterTypes()[0]);
+			 
+			 if(dependency != null) {
+				 m.invoke(obj, dependency);
+			 }
+		   }
+		}
+	 }
+```
