--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -33,7 +33,8 @@
 ### Properties
 - Hashtables의 하위클래스이다.
 - Hashtables를 상속 받았기에 Map의 속성 즉 Key와 Value를 갖는다.
-- HashMap과 큰 차이는 없지만 Properties 클래스느 파일 
+- HashMap과 큰 차이는 없지만 Properties 클래스는 파일 입출력을 지원한다.
+- key=value 형식으로 작성 된 파일을 key와 value 로 나누어 저장할 때 유용하다. 매우중요!!!
 - 메서드 종류
 ```
 load()
