--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -217,3 +217,29 @@ private void callSetter(Object obj) throws Exception {
 		}
 	 }
 ```
+
+
+
+## 내가 생각
+- 새 페이지 컨트롤러가 추가되면 Listner 클래스에 해당 코드를 추가해야함 ( 계속 수정
+- DAO나 페이지 컨트롤러가 추가되더라도 Listener클래스를 변경하지 않는 방법? " 구조변경"
+- 객체 정보를 외부 파일(프로퍼티 파일)로 분리하기
+```
+보곤소에 저장할 때 사용할 이름		
+memberDAO 			= 	spms.dao.MySqlMemberDao
+```
+
+- Listener는 객체 생성 및 관리를 ApplicationContext에게 위임
+- 컨트롤러 추가할때 Listener 파일을 수정하지 않고 file에 추가하기
+- 키값과 컨트롤러만 매핑해주기
+
+#### ApllicationContext.java
+- 의존성 객체를 주입할 클래스 만들기
+- key : jndi.dataSOurce, memberDAO, /auth/login.do 등
+- value : java:comp/env/jdbc/studydb 등등
+
+
+
+
+
+
