--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -53,6 +53,23 @@ for ( Object i : p.keySet()) {
 
 ```
 
+### invoke
+- 메서드명만 받아서 정의되어있는 메서드중 내가 원하는 메서드만 실행시키고 싶을때 사용
+```
+// 정의해둔 Dao에서 메서들을 가져옴
+Method[] methodList = testDao.getClass().getMethods();
+
+// 가져온 메서드중에서 메서드명이 같은것을 실행시킴
+for(Method m : methodList){
+	if(m.getName().equals(전달받은이름)){
+	결과 = m.invoke(testDaom,전달파라미터);	
+  }
+}
+
+```
+
+
+
 ## 코드전체
 ```java
 public class ApplicationContext {
@@ -225,8 +242,8 @@ private void callSetter(Object obj) throws Exception {
 - DAO나 페이지 컨트롤러가 추가되더라도 Listener클래스를 변경하지 않는 방법? " 구조변경"
 - 객체 정보를 외부 파일(프로퍼티 파일)로 분리하기
 ```
-보곤소에 저장할 때 사용할 이름		
-memberDAO 			= 	spms.dao.MySqlMemberDao
+보곤소에 저장할 때 사용할 이름		생성할 객체의 클래스 이름
+memberDAO 			= 	study.dao.MySqlMemberDao
 ```
 
 - Listener는 객체 생성 및 관리를 ApplicationContext에게 위임
@@ -238,7 +255,39 @@ memberDAO 			= 	spms.dao.MySqlMemberDao
 - key : jndi.dataSOurce, memberDAO, /auth/login.do 등
 - value : java:comp/env/jdbc/studydb 등등
 
+``` java
+	private void callSetter(Object obj) throws Exception {
+		
+		Object dependency = null;
+		Method[] ms = obj.getClass().getMethods();
+		for(Method m :ms) {
+			if(m.getName().startsWith("set")) {
+			
+			// Setter메서드를 찾아서 setter메서드의 매개변수 타입으로 객체를 찾음
+			// dependency = MySqlMemberDao
+			 dependency = findObjectByType(m.getParameterTypes()[0]);
+			 
+			 if(dependency != null) {
+				// setMemberDao(memberDao)
+				 m.invoke(obj, dependency);
+			 }
+		   }
+		}
+	 }
+	private Object findObjectByType(Class<?> type) {
+		
+		// 메서드의 매개변수 타입과 일치하는 객체를 찾음 objTable에 저장된 객체들 중에서
+		// 매개변수 타입과 일치하는 객체를 찾아 반환함
 
+		Collection<Object> objs = objTable.values();
+		for(Object obj: objs) {
+			if(type.isInstance(obj)) {
+				return obj;
+			}
+		}
+		return null;
+	}
+```
 
 
 
