--- a/6월 2주차/6월 7일.MD
+++ b/6월 2주차/6월 7일.MD
@@ -156,7 +156,7 @@ HashMap<String, Object> objTable = new HashMap<String, Object>();
 - 'key'를 입력받아 해당 키에 해당하는 객체를 반환함
 ```java
 public Object getBean(String key){	
-	//객체반환
+	// key값에 해당하는 객체반환
 	return objTable.get(key);
 	}
 ```
