--- a/6월 2주차/6월 8일.MD
+++ b/6월 2주차/6월 8일.MD
@@ -30,3 +30,10 @@
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 - 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
 ------------------------------------------------------------------------
+
+```
+<!-- 
+	Reflections 오픈소스 라이브러리
+		- http://github.com/ronmamo/reflections
+ -->
+```
