--- a/6월 2주차/6월 8일.MD
+++ b/6월 2주차/6월 8일.MD
@@ -35,5 +35,13 @@
 <!-- 
 	Reflections 오픈소스 라이브러리
 		- http://github.com/ronmamo/reflections
+		- https://code.google.com/p/reflections/
+		
  -->
+ 아래꺼로 다운로드
+ reflections-0.9.9-RC1-uberjar.jar  --> 얘는 압축풀고 lib에 넣기
+ reflections-0.9.9-RC1.jar	   --> 그냥 넣기
+ 
 ```
+
+
