--- a/6월 2주차/6월 8일.MD
+++ b/6월 2주차/6월 8일.MD
@@ -42,6 +42,9 @@
  reflections-0.9.9-RC1-uberjar.jar  --> 얘는 압축풀고 lib에 넣기
  reflections-0.9.9-RC1.jar	   --> 그냥 넣기
  
+ 지금까지 넣은 라이브러리
+ jstl, jndi, reflections
+ 
 ```
 
 
