--- a/6월 2주차/6월 8일.MD
+++ b/6월 2주차/6월 8일.MD
@@ -50,3 +50,43 @@
 ### 어노테이션
 - 컴파일, 배포, 실행때 참조할 수 있는 특별한 주석이다.
 - 어노테이션을 활용하면 클래스나 필드, 메서드에 부가정보를 등록할 수 있다.
+
+
+## 어노테이션 처리
+- annotaion 패키지 내
+```java
+@Retention(RetentionPolicy.RUNTIME)
+public @interface Component {
+	
+	String value() default "";
+	
+}
+```
+
+- ApplicationContext
+```java
+   public void prepareAnnotationObject() throws Exception{
+		 //리플렉션 라이브러리 : 리플렉션API보다 더 쉽게 클래스나 메소드를 찾을 수 있다.
+		 		//new Reflections("패키지명") : 해당 패키지의 하위를 모두 찾는다.
+		 		//new Reflections("spms") : spms 패키지의 하위를 모두 찾는다.
+		 		//new Reflections("study.controller") : study.controller 패키지의 하위를 모두 찾는다.
+		 		//new Reflections("") : classpath 하위를 모두 찾는다(컴파일된 클래스를 모두 검사)
+		   Reflections reflector = new Reflections("");
+		   
+		   Set<Class<?>> list = reflector.getTypesAnnotatedWith(Component.class);
+		   String key = null;
+		   
+		   for(Class<?> clazz : list) {
+			   key = clazz.getAnnotation(Component.class).value();
+			   objTable.put(key, clazz.newInstance());
+		   }
+		   
+   }
+```
+- Controller 및 dao MySqlMemeberDao에 Component 처리 하기
+```
+@Component("/auth/login.do")
+public class LogInController implements Controller,DataBinding{
+```
+
+
