--- a/6월 2주차/6월 9일.MD
+++ b/6월 2주차/6월 9일.MD
@@ -30,3 +30,57 @@
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 - 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
 ------------------------------------------------------------------------
+
+
+### 오늘
+- 이클립스 오른쪽 위 Java로 바꿔서 Java projects?
+
+## 이론
+```
+/*
+	getClass()						// Class<?>
+	Class.forName(클래스명)				// 로딩
+	newInstance()					// 동적객체생성
+	getMethods()					// 전체 메서드
+	getMethod("메소드명", 타입, 타입,,)	// 특정 메서드
+	invoke(객체,값,,)					// 메서드를 실행
+	
+	getParameters()					// 매개변수
+	
+*/
+```
+
+
+### Reflection 이용
+```java
+package reflection;
+
+import java.lang.reflect.Method;
+import java.lang.reflect.Parameter;
+
+class MyClass{
+	public void doSomething(String name, int age, String address) {
+		System.out.println(name+"님의 나이는 " + age + "살 이고 " + address + "에 살고 있습니다.");
+	}
+}
+
+public class Reflection2 {
+	public static void main(String[] args) throws Exception {
+		
+		MyClass obj = new MyClass();
+		
+		Method method = MyClass.class.getMethod("doSomething", String.class, int.class, String.class);
+		
+		method.invoke(obj, "홍길동",25,"서울");
+		
+		Parameter[] param = method.getParameters();
+		
+		for(Parameter p : param) {
+			System.out.println(p);
+			method.invoke(obj, "강아지",10,"마포구");
+		}
+		
+	}
+}
+
+```
