--- a/6월 2주차/6월 9일.MD
+++ b/6월 2주차/6월 9일.MD
@@ -28,7 +28,7 @@
 - CRUD를 포함한다.
 - 화면설계에 준하는 완성도를 구현한다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
-- 심사평가원 평가예쩡 : 7/3 ~ 7/5 예정, 프로젝트 평가
+- 심사평가원 평가예정 : 7/3 ~ 7/5 예정, 프로젝트 평가
 ------------------------------------------------------------------------
 
 
