--- a/6월 3주차/6월 14일.MD
+++ b/6월 3주차/6월 14일.MD
@@ -6,13 +6,8 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Annotation처리를 활용한 구현을 이해한다.
-- (실습) 개인 포트폴리오 작성
-- (실습) 성적관리 정보시스템 작성
-- 학습내용에 대해 이해 안가는 부분 실습시간이용 질문
-- JSP 종료 -> 개인 포폴 작성 6/14 ~ 6/15 평가
-- (평가채점/성적관리 시스템 평가)
-- 팀 프로젝트 관련 Meeting
+- 프로그래밍언어활용 - 4교시~
+- 서버프로그래밍 정기평가예정 ~ 5교시~
 
 - 학습계획 ( 다음주 JSP 및 개인프로젝트 완료/평가)
 - Spring을 활용한 팀프로젝트 진행 : 조편성 (5~6명) 6/30 , 자료정리 7/3 ~ 7/4 심사평가원
