--- a/6월 3주차/6월 14일.MD
+++ b/6월 3주차/6월 14일.MD
@@ -24,3 +24,41 @@
 - 화면설계에 준하는 완성도를 구현한다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 - 심사평가원 평가예정 : 7/3 ~ 7/5 예정, 프로젝트 평가
+
+
+### spring 설치
+```
+https://github.com/spring-attic/toolsuite-distribution/wiki/Spring-Tool-Suite-3
+
+Spring Tool Suite 3.9.13 (New and Noteworthy) <<<- 이거 찾기
+
+https://download.springsource.com/release/STS/3.9.13.RELEASE/dist/e4.16/spring-tool-suite-3.9.13.RELEASE-e4.16.0-win32-x86_64.zip
+이거 다운로드
+
+Spring에 두고 톰캣 압축파일도 폴더에 두기
+
+sts-3.9.13 RELEASE 
+STS.ini 이거
+
+-startup
+plugins/org.eclipse.equinox.launcher_1.5.700.v20200207-2156.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.win32.win32.x86_64_1.1.1200.v20200508-1552
+-product
+org.springsource.sts.ide
+--launcher.defaultAction
+openFile
+-vm
+C:\Program Files\Java\jdk-11\bin/javaw.exe
+-vmargs
+-Dosgi.requiredJavaVersion=1.8
+-Xms1024m
+-Xmx4096m
+-XX:+UseG1GC
+-XX:+UseStringDeduplication
+--add-modules=ALL-SYSTEM
+-Dosgi.module.lock.timeout=10
+
+이렇게 바꿔주
+
+```
