--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -9,4 +9,66 @@
 - 스프링학습
 - 의존성주입 이해
 
+### spring 설치 및 사용
+```
+https://github.com/spring-attic/toolsuite-distribution/wiki/Spring-Tool-Suite-3
+
+Spring Tool Suite 3.9.13 (New and Noteworthy) <<<- 이거 찾기
+
+https://download.springsource.com/release/STS/3.9.13.RELEASE/dist/e4.16/spring-tool-suite-3.9.13.RELEASE-e4.16.0-win32-x86_64.zip
+이거 다운로드
+
+Spring에 두고 톰캣 압축파일도 폴더에 두기
+
+sts-3.9.13 RELEASE 
+STS.ini 이거
+
+-startup
+plugins/org.eclipse.equinox.launcher_1.5.700.v20200207-2156.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.win32.win32.x86_64_1.1.1200.v20200508-1552
+-product
+org.springsource.sts.ide
+--launcher.defaultAction
+openFile
+-vm
+C:\Program Files\Java\jdk-11\bin/javaw.exe
+-vmargs
+-Dosgi.requiredJavaVersion=1.8
+-Xms1024m
+-Xmx4096m
+-XX:+UseG1GC
+-XX:+UseStringDeduplication
+--add-modules=ALL-SYSTEM
+-Dosgi.module.lock.timeout=10
+
+이렇게 바꿔주기
+
+
+왼쪽아래 Server에서 톰캣설정 (똑같음)
+
+
+
+
+```
+
+## 프레임워크
+- 동작은 XML파일의 설정으로 이루어진다.
+
+장점
+- 개발자 할 일 줄어듬, 개발 비용 낮아짐
+
+단점
+- 공부해야함
+- 커스터마이징이 힘듬
+
+종류
+- 스트러츠(Struts) : 기존 프레젠테이션 프레임워크인 웹(Webwork)프레임워크와 결합된 상태
+- 스프링(Spring) : 여러 개의 모듈이 존재 Spring MVC, Spring IOC, AOP
+- 영속 프레임워크 : myBatis(XML파일에 데이터베이스 처리에 관한 SQL설정, 자바에서 간단히 연결), Hibernate(자바객체와 데이터베이스 데이터 객체지향으로 
+
+
+
+
+
 
