--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -65,7 +65,9 @@ C:\Program Files\Java\jdk-11\bin/javaw.exe
 종류
 - 스트러츠(Struts) : 기존 프레젠테이션 프레임워크인 웹(Webwork)프레임워크와 결합된 상태
 - 스프링(Spring) : 여러 개의 모듈이 존재 Spring MVC, Spring IOC, AOP
-- 영속 프레임워크 : myBatis(XML파일에 데이터베이스 처리에 관한 SQL설정, 자바에서 간단히 연결), Hibernate(자바객체와 데이터베이스 데이터 객체지향으로 
+- 영속 프레임워크 : myBatis(XML파일에 데이터베이스 처리에 관한 SQL설정, 자바에서 간단히 연결), Hibernate(자바객체와 데이터베이스 데이터 객체지향으로 매핑하여 처리함
+
+
 
 
 
