--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -47,7 +47,8 @@ C:\Program Files\Java\jdk-11\bin/javaw.exe
 
 왼쪽아래 Server에서 톰캣설정 (똑같음)
 
-
+file spring legacy
+밑에 spring mvc 다음 com.company.biz
 
 
 ```
