--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -50,8 +50,40 @@ C:\Program Files\Java\jdk-11\bin/javaw.exe
 file spring legacy
 밑에 spring mvc 다음 com.company.biz
 
+Spring1 프로젝트 만들고 프로퍼티 Project Facets Dynamic Web Module 3.1, Java 11 Runtime Apache Tomcat v8.5
+
+test랑 뭐... 이것저것 삭제 XML도 xsi: 아래부분 삭제
+
+pom.xml 에서 java-version 11로 바꾸기 <java-version>11</java-version>
+<org.springframework-version>5.0.7.RELEASE</org.springframework-version>   이렇게 변경
+
+140번째줄 쯔음 아래처럼 11로 바꾸
+<configuration>
+   <source>11</source>
+    <target>11</target>
+
+
 
 ```
+
+## 이론
+```
+	GroupID
+		. 프로젝트 식별자 : 모든 프로젝트 중에서 이 프로젝트를 식별할 수 있는 식별자
+		. 회사의 도메인을 거꾸로 사용한다.
+    
+	ArtifactId
+		. 버전이 없는 jar파일의 이름으로
+		. 프로젝트 진행시에 해당 프로젝트의 이름을 사용한다.
+		. 이 이름으로 된 jar파일이 생성된다.
+		. 특수문자를 사용하지 않고 소문자로만 작성한다.
+    
+  Name
+		. 물리적으로 생성되는 프로그램(프로젝트) 이름을 말한다.
+    
+```
+
+
 
 ## 프레임워크
 - 동작은 XML파일의 설정으로 이루어진다.
