--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -57,7 +57,7 @@ test랑 뭐... 이것저것 삭제 XML도 xsi: 아래부분 삭제
 pom.xml 에서 java-version 11로 바꾸기 <java-version>11</java-version>
 <org.springframework-version>5.0.7.RELEASE</org.springframework-version>   이렇게 변경
 
-140번째줄 쯔음 아래처럼 11로 바꾸
+140번째줄 쯔음 아래처럼 11로 바꾸기 
 <configuration>
    <source>11</source>
     <target>11</target>
@@ -78,8 +78,58 @@ pom.xml 에서 java-version 11로 바꾸기 <java-version>11</java-version>
 		. 이 이름으로 된 jar파일이 생성된다.
 		. 특수문자를 사용하지 않고 소문자로만 작성한다.
     
-  Name
+  	Name
 		. 물리적으로 생성되는 프로그램(프로젝트) 이름을 말한다.
+		
+		
+	<!-- 
+
+	Servlet컨테이너는 web.xml에 등록하여 관리하였다면
+	Spring컨테이너에서는 applicationContext.xml에서 동일한 처리를 한다.
+	
+
+	  beans
+	   1. beans 속성들
+		beans엘리먼트 속성들
+			. 클래스를 등록한다.
+			. id	- 스프링파일에서 유일해야한다.
+					- 생략가능, 클라이언트는 호출할 이름이 있어야 하므로 id는 있어야 한다.
+					- 낙타표기법, 문자표기법을 따른다.
+
+			. name
+				- id와 동일한 기능을 한다. 유일해야 한다.
+				- 식별자 작성규칙을 따르지않아도 된다.
+
+			. class
+				- 필수속성이다. 패키지명까지 함께 지정한다.
+
+			. init - method속성
+				- 스프링컨테이너가 객체를 생성할때 초기화 작업을 설정한다.
+
+			. destroy - method속성
+				- 스프링컨테이너가 객체를 삭제하기 직전에 호출된 메서드
+
+			. scope
+				- 기본적으로 싱글톤 방식이다.
+				- <bean id="" class="" scope="singleton />"
+
+		2. import : import 처리한다.
+				- beans 등록, 트랜잭션관리, 예외처리, 다국어처리등 하나에 다하면 복잡해진다.
+				이럴땐 기능별로 xml파일로 나누어 설정하고 여기에서 import 하면 된다.
+				<beans>
+					<import resource="context-dataSource.xml"/>
+					<import resource="transaction.xml"/>
+					~~~~~
+
+				</beans>
+
+		3. alisa
+
+		4. description		
+	
+
+ -->
+		
     
 ```
 
@@ -102,6 +152,27 @@ pom.xml 에서 java-version 11로 바꾸기 <java-version>11</java-version>
 
 
 
+### 다운캐스팅 결합도 줄이기 
+```
+public class TVUser {
+	public static void main(String[] args) {
+		
+		BeanFactory factory = new BeanFactory();
+		
+		
+		// Object타입을 TV로 다운캐스팅
+		TV tv = (TV)factory.getBean(args[0]);
+		
+		tv.powerOn();
+		tv.volumeUp();
+		tv.volumeDown();
+		tv.powerOff();
+		
+	
+		
+	}	
+}
+```
 
 
 
