--- a/6월 3주차/6월 15일.MD
+++ b/6월 3주차/6월 15일.MD
@@ -130,6 +130,25 @@ pom.xml 에서 java-version 11로 바꾸기 <java-version>11</java-version>
 
  -->
 		
+ src/main/java		-------- 비즈니스로직 구현
+ 	- com.myCompany.biz
+	- com.myCompany.biz.member
+	- com.myCompany.biz.board
+
+ src/main/resource	------- 실행할때 참고하는 기본환경 설정
+ 	- applicationContext.xml
+
+ Maven Dependencies	------- 프로젝트 빌드 tool
+ 				- 필요한 라이브러리를 손쉽게 다운받아서 
+				  프로젝트에 필요한 라이브러리를 제공해준다.
+    				- pom.xml에 원하는 라이브러리를 기술하면 된다.
+				
+ spring
+ 	appServlet	------- 웹과 관련된 스프링 설정파일
+	
+ view			------- view 파일경로
+ 
+ 
     
 ```
 
