--- a/6월 3주차/6월 16일.MD
+++ b/6월 3주차/6월 16일.MD
@@ -18,10 +18,8 @@
 - beans, bean, id, class/value, constructor-arg, index, ref, value, property, name, ref, value
 
 
-#### URL 경로실습
-
 -----------------------------------------------------
 
 ## 학습목표
-- 스프링학습
-- 의존성주입 이해
+- 의존성 주입의 List, set Map형태의 의존성 주입 방법
+- Annotation 처리
